Remove left side html

--- a/index.html
+++ b/index.html
@@ -122,19 +122,10 @@
   </head>
   <body>
     <div class="main-block">
-      <div class="left-part">
-        <i class="fas fa-graduation-cap"></i>
-        <h1>Register to our courses</h1>
-        <p>W3docs provides free learning materials for programming languages like HTML, CSS, Java Script, PHP etc.</p>
-        <div class="btn-group">
-          <a class="btn-item" href="https://www.w3docs.com/learn-html.html">Learn HTML</a>
-          <a class="btn-item" href="https://www.w3docs.com/quiz/#">Select Quiz</a>
-        </div>
-      </div>
       <form action="/">
         <div class="title">
           <i class="fas fa-pencil-alt"></i>
-          <h2>Register here</h2>
+          <h2>Register For Online Courses</h2>
         </div>
         <div class="info">
           <input class="fname" type="text" name="name" placeholder="Full name">
@@ -153,7 +144,7 @@
           </select>
         </div>
         <div class="checkbox">
-          <input type="checkbox" name="checkbox"><span>I agree to the <a href="https://www.w3docs.com/privacy-policy">Privacy Poalicy for W3Docs.</a></span>
+          <input type="checkbox" name="checkbox"><span>I agree to the <a href="https://www.w3docs.com/privacy-policy">Privacy Poalicy for ErickTFDemo.</a></span>
         </div>
         <button type="submit" href="/">Submit</button>
       </form>
