--- a/index.html
+++ b/index.html
@@ -1,90 +1,93 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Educational registration form</title>
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
-    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700" rel="stylesheet">
-    <style>
-      html, body {
+<head>
+  <title>Educational registration form</title>
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
+  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700" rel="stylesheet">
+  <style>
+    html, body {
       min-height: 100%;
-      }
-      body, div, form, input, select, p {
+    }
+    body, div, form, input, select, p {
       padding: 0;
       margin: 0;
       outline: none;
       font-family: Roboto, Arial, sans-serif;
       font-size: 16px;
       color: #eee;
-      }
-      body {
+    }
+    body {
       background: url("/uploads/media/default/0001/01/b5edc1bad4dc8c20291c8394527cb2c5b43ee13c.jpeg") no-repeat center;
       background-size: cover;
-      }
-      h1, h2 {
+    }
+    h1, h2 {
       text-transform: uppercase;
       font-weight: 400;
-      }
-      h2 {
+    }
+    h2 {
       margin: 0 0 0 8px;
-      }
-      .main-block {
+    }
+    .main-block {
       display: flex;
       flex-direction: column;
       justify-content: center;
       align-items: center;
       height: 100%;
       padding: 25px;
-      background: rgba(0, 0, 0, 0.5);
-      }
-      .left-part, form {
+      background: rgba(0, 0, 0, 0.1);
+    }
+    .left-part, form {
       padding: 25px;
-      }
-      .left-part {
+    }
+    .left-part {
       text-align: center;
-      }
-      .fa-graduation-cap {
+    }
+    .fa-graduation-cap {
       font-size: 72px;
-      }
-      form {
+    }
+    form {
       background: rgba(0, 0, 0, 0.7);
-      }
-      .title {
+    }
+    .title {
       display: flex;
       align-items: center;
       margin-bottom: 20px;
-      }
-      .info {
+    }
+    .info {
       display: flex;
       flex-direction: column;
-      }
-      input, select {
+    }
+    #form {
+      width 50%;
+    }
+    input, select {
       padding: 5px;
       margin-bottom: 30px;
       background: transparent;
       border: none;
       border-bottom: 1px solid #eee;
-      }
-      input::placeholder {
+    }
+    input::placeholder {
       color: #eee;
-      }
-      option:focus {
+    }
+    option:focus {
       border: none;
-      }
-      option {
+    }
+    option {
       background: black;
       border: none;
-      }
-      .checkbox input {
+    }
+    .checkbox input {
       margin: 0 10px 0 0;
       vertical-align: middle;
-      }
-      .checkbox a {
+    }
+    .checkbox a {
       color: #26a9e0;
-      }
-      .checkbox a:hover {
+    }
+    .checkbox a:hover {
       color: #85d6de;
-      }
-      .btn-item, button {
+    }
+    .btn-item, button {
       padding: 10px 5px;
       margin-top: 20px;
       border-radius: 5px;
@@ -94,60 +97,71 @@
       font-size: 15px;
       font-weight: 400;
       color: #fff;
-      }
-      .btn-item {
+    }
+    .btn-item {
       display: inline-block;
       margin: 20px 5px 0;
-      }
-      button {
+    }
+    button {
       width: 100%;
-      }
-      button:hover, .btn-item:hover {
+    }
+    button:hover, .btn-item:hover {
       background: #85d6de;
-      }
-      @media (min-width: 568px) {
+    }
+    @media (min-width: 568px) {
       html, body {
-      height: 100%;
+        height: 100%;
       }
       .main-block {
-      flex-direction: row;
-      height: calc(100% - 50px);
+        flex-direction: row;
+        height: calc(100% - 50px);
       }
       .left-part, form {
-      flex: 1;
-      height: auto;
+        height: auto;
       }
-      }
-    </style>
-  </head>
-  <body>
-    <div class="main-block">
-      <form action="/">
-        <div class="title">
-          <i class="fas fa-pencil-alt"></i>
-          <h2>Register For Online Courses</h2>
-        </div>
-        <div class="info">
-          <input class="fname" type="text" name="name" placeholder="Full name">
-          <input type="text" name="name" placeholder="Email">
-          <input type="text" name="name" placeholder="Phone number">
-          <input type="password" name="name" placeholder="Password">
-          <select>
-            <option value="course-type" selected>Course type*</option>
-            <option value="short-courses">Short courses</option>
-            <option value="featured-courses">Featured courses</option>
-            <option value="undergraduate">Undergraduate</option>
-            <option value="diploma">Diploma</option>
-            <option value="certificate">Certificate</option>
-            <option value="masters-degree">Masters degree</option>
-            <option value="postgraduate">Postgraduate</option>
-          </select>
-        </div>
-        <div class="checkbox">
-          <input type="checkbox" name="checkbox"><span>I agree to the <a href="https://www.w3docs.com/privacy-policy">Privacy Poalicy for ErickTFDemo.</a></span>
-        </div>
-        <button type="submit" href="/">Submit</button>
-      </form>
-    </div>
-  </body>
+    }
+  </style>
+</head>
+<body>
+  <div class="main-block">
+    <form action="/" id="form">
+      <div class="title">
+        <h2>Register For Online Courses</h2>
+      </div>
+      <div class="info">
+        <input class="fname" type="text" name="name" placeholder="Full name">
+        <input type="text" name="name" placeholder="Email">
+        <input type="text" name="name" placeholder="Phone number">
+        <input type="state" name="name" placeholder="State">
+        <select>
+          <option value="course-type" selected>Course type*</option>
+          <option value="short-courses">Short courses</option>
+          <option value="featured-courses">Featured courses</option>
+          <option value="undergraduate">Undergraduate</option>
+          <option value="diploma">Diploma</option>
+          <option value="certificate">Certificate</option>
+          <option value="masters-degree">Masters degree</option>
+          <option value="postgraduate">Postgraduate</option>
+        </select>
+      </div>
+      <div class="checkbox">
+        <input type="checkbox" name="checkbox"><span>I agree to the <a href="https://www.w3docs.com/privacy-policy">Privacy Poalicy for Erick TF Demo.</a></span>
+      </div>
+      <button type="submit" href="/">Submit</button>
+    </form>
+  </div>
+  <!-- TrustedForm -->
+  <script type="text/javascript">
+    (function() {
+      var tf = document.createElement('script');
+      tf.type = 'text/javascript'; tf.async = true;
+      tf.src = ("https:" == document.location.protocol ? 'https' : 'http') + "://api.trustedform.com/trustedform.js?field=xxTrustedFormCertUrl&ping_field=xxTrustedFormPingUrl&l=" + new Date().getTime() + Math.random();
+      var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(tf, s);
+    })();
+  </script>
+  <noscript>
+    <img src="https://api.trustedform.com/ns.gif" />
+  </noscript>
+  <!-- End TrustedForm -->
+</body>
 </html>
