Submission URL added

--- a/index.html
+++ b/index.html
@@ -124,15 +124,16 @@
 </head>
 <body>
   <div class="main-block">
-    <form action="/" id="form">
+    <form id="form" method="post" action="https://app.leadconduit.com/flows/628681c5a21c6abfdb9ea145/sources/6286926ee02b4506ae6f87de/submit">
       <div class="title">
         <h2>Register For Online Courses</h2>
       </div>
       <div class="info">
-        <input class="fname" type="text" name="name" placeholder="Full name">
-        <input type="text" name="name" placeholder="Email">
-        <input type="text" name="name" placeholder="Phone number">
-        <input type="state" name="name" placeholder="State">
+        <input class="fname" type="text" name="first_name" placeholder="First Name">
+        <input type="text" name="last_name" placeholder="Last Name">
+        <input type="text" name="email" placeholder="Email">
+        <input type="text" name="phone" placeholder="Phone number">
+        <input type="state" name="state" placeholder="State">
         <select>
           <option value="course-type" selected>Course type*</option>
           <option value="short-courses">Short courses</option>
