--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
         <input class="fname" type="text" name="first_name" placeholder="First Name">
         <input type="text" name="last_name" placeholder="Last Name">
         <input type="text" name="email" placeholder="Email">
-        <input type="text" name="phone" placeholder="Phone number">
+        <input type="text" name="phone_1" placeholder="Phone number">
         <input type="state" name="state" placeholder="State">
         <select>
           <option value="course-type" selected>Course type*</option>
