--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 </head>
 <body>
   <div class="main-block">
-    <form id="form" method="post" action="https://app.leadconduit.com/flows/628681c5a21c6abfdb9ea145/sources/6286926ee02b4506ae6f87de/submit">
+    <form id="form" data-redirect="submission.html" method="post" action="https://app.leadconduit.com/flows/628681c5a21c6abfdb9ea145/sources/6286926ee02b4506ae6f87de/submit">
       <div class="title">
         <h2>Register For Online Courses</h2>
       </div>
@@ -148,7 +148,7 @@
       <div class="checkbox">
         <input type="checkbox" name="checkbox"><span>I agree to the <a href="https://www.w3docs.com/privacy-policy">Privacy Poalicy for Erick TF Demo.</a></span>
       </div>
-      <button type="submit" href="/">Submit</button>
+      <button type="submit" href="submission.html">Submit</button>
     </form>
   </div>
   <!-- TrustedForm -->
