--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 </head>
 <body>
   <div class="main-block">
-    <form id="form" data-redirect="submission.html" method="post" action="https://app.leadconduit.com/flows/628681c5a21c6abfdb9ea145/sources/6286926ee02b4506ae6f87de/submit">
+    <form id="form" data-redirect="https://ehern131.github.io/erickh-trustedform-demo/submission" method="post" action="https://app.leadconduit.com/flows/628681c5a21c6abfdb9ea145/sources/6286926ee02b4506ae6f87de/submit">
       <div class="title">
         <h2>Register For Online Courses</h2>
       </div>
