justify center for submission redirect

--- a/submission.html
+++ b/submission.html
@@ -30,6 +30,10 @@
           margin-left:-15px;
         }
         .card {
+          display: flex;
+          flex-direction: column;
+          justify-content: center;
+          align-items: center;
           background: white;
           padding: 60px;
           border-radius: 4px;
