--- a/submission.html
+++ b/submission.html
@@ -30,12 +30,15 @@
           margin-left:-15px;
         }
         .card {
+
           display: flex;
           flex-direction: column;
           justify-content: center;
           align-items: center;
           background: white;
           padding: 60px;
+          flex-direction: row;
+          height: calc(100% - 50px);
           border-radius: 4px;
           box-shadow: 0 2px 3px #C8D0D8;
           display: inline-block;
