--- a/index.html
+++ b/index.html
@@ -134,6 +134,7 @@
         <input type="text" name="email" placeholder="Email">
         <input type="text" name="phone_1" placeholder="Phone number">
         <input type="state" name="state" placeholder="State">
+        <input type="text" name="featured_courses_apros" placeholder="Featured Courses">
         <select>
           <option value="course-type" selected>Course type*</option>
           <option value="short-courses">Short courses</option>
@@ -146,7 +147,7 @@
         </select>
       </div>
       <div class="checkbox">
-        <input type="checkbox" name="checkbox"><span>I agree to the <a href="https://www.w3docs.com/privacy-policy">Privacy Poalicy for Erick TF Demo.</a></span>
+        <input type="checkbox" name="checkbox"><span>I agree to the <a href="https://www.w3docs.com/privacy-policy">Privacy Policy for Erick TF Demo.</a></span>
       </div>
       <button type="submit" href="submission.html">Submit</button>
     </form>
