--- a/index.html
+++ b/index.html
@@ -134,6 +134,8 @@
         <input type="text" name="email" placeholder="Email">
         <input type="text" name="phone_1" placeholder="Phone number">
         <input type="state" name="state" placeholder="State">
+        <input type="leads_age" name="leads_age" placeholder="Age">
+
         <!-- <input type="text" name="featured_courses_apros" placeholder="Featured Courses">
         <select>
           <option value="course-type" selected>Course type*</option>
